--- a/HACKING.org
+++ b/HACKING.org
@@ -43,7 +43,7 @@ Git is used to manage the script's state:
 
 - Release in automatic mode
   =dune-release=
-  Until dune-release.1.5.0 is released the =master= branch of dune-release
+  Until dune-release.1.5.0 is released the =main= branch of dune-release
   should be used.
 
 - Close release milestone.
@@ -75,18 +75,18 @@ Git is used to manage the script's state:
 
 * Backporting changes to a point release
 
-Sometimes it is helpful to create a point release, but master contains
+Sometimes it is helpful to create a point release, but main contains
 changes that would be unsuitable for a point release.
 
-Suppose the last release is 0.3.5, and since then, master contains new
+Suppose the last release is 0.3.5, and since then, main contains new
 features F1 and F2 and a bugfix B.
 
 #+BEGIN_SRC
 release 0.3.5 -> feature F1 -> bugfix B -> feature F2
-tag: 0.3.5                                 branch: master
+tag: 0.3.5                                 branch: main
 #+END_SRC
 
-Instead of reverting F1 and F2 in master, one can create a release branch for
+Instead of reverting F1 and F2 in main, one can create a release branch for
 the 0.3 releases.
 
 The end graph looks like this (if this is the first point release done this
@@ -94,7 +94,7 @@ way in the 0.3.x series):
 
 #+BEGIN_SRC
 release 0.3.5 -> feature F1 -> bugfix B -> feature F2 -> merge commit
-tag: 0.3.5                                               branch: master
+tag: 0.3.5                                               branch: main
             \                                          /
               -> bugfix B -> release 0.3.6  ----------
                              tag: 0.3.6
@@ -105,7 +105,7 @@ Or (if a previous point release has been made in the same way):
 
 #+BEGIN_SRC
  past  ->  merge commit -> feature F1 -> bugfix B -> feature F2 -> merge commit
-               /                                       branch: master
+               /                                       branch: main
               /                                       /
  release 0.3.5  -> bugfix B -> release 0.3.6  -------
  tag: 0.3.5                    tag: 0.3.6
@@ -113,8 +113,8 @@ Or (if a previous point release has been made in the same way):
 #+END_SRC
 
 Notes:
-- the release branch is always merged into master, not the other way around.
-- version detection relies on git tags, so master will be marked 0.3.5-x
+- the release branch is always merged into main, not the other way around.
+- version detection relies on git tags, so main will be marked 0.3.5-x
   before the merge and 0.3.6-x after.
 
 ** Step 1: prepare release branch
@@ -132,7 +132,7 @@ Notes:
   + These may not apply cleanly, so fix conflicts and QA (using CI, etc) as usual.
   + For the changelog in particular, the entry for the bugfix should go in a new section, and new features should not appear.
 
-Changelog in master:
+Changelog in main:
 
 #+BEGIN_SRC
 ### unreleased
@@ -171,13 +171,13 @@ Changelog in 0.3 release branch:
 
 - Wait for opam-repository PR to be merged.
 
-- Merge release branch into master.
+- Merge release branch into main.
   + Not as a PR; as a manual merge.
-  + Example: =git checkout master= followed by =git merge 0.3=.
+  + Example: =git checkout main= followed by =git merge 0.3=.
   + This may conflict, in particular in the changelog.
-  + To resolve the changelog conflict, add the point release section into master, and remove backported entries from the unreleased section.
+  + To resolve the changelog conflict, add the point release section into main, and remove backported entries from the unreleased section.
 
-Changelog in master before merging:
+Changelog in main before merging:
 
 #+BEGIN_SRC
 ### unreleased
