--- a/HACKING.org
+++ b/HACKING.org
@@ -23,7 +23,7 @@ Git is used to manage the script's state:
 - If a supported OCaml version does not have CI support, run test suite locally.
 
 - In =CHANGES.md=, change =(unreleased)= with the current version (=a.b.c=)
-  and date. In =README.md=, update the recommended version to use in
+  and date. In =README.md=, =doc/faq.mld= and =doc/getting_started.mld= update the recommended version to use in
   =.ocamlformat= files. Commit the changes.
 
 - Tag
